# tomato_classification

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  README.md  TomatoClassification  TomatoClassification.cbp  changes_log.txt  classifyByColor.cpp  classifyByColor.h  cmake_install.cmake  colorProfile.cpp  colorProfile.h  detection.cpp  detection.h  function.cpp  function.h  main.cpp  outcpp.avi  pc.txt  runProgram.cpp  runProgram.h  segmentation.cpp  segmentation.h  test.sh  utils.cpp  utils.h
Document/: Doc Logging for project.md
Document/Calculate/: cachua_lab.xlsx
Documents/Calculate/: cachua.xlsx
Documents/Find Color Values/TXT Files/: green2.txt  red2.txt  red4.txt  red5.txt  red6.txt  yellow2.txt  yellow3.txt
Documents/Report/: BAO CAO V3_0.md  project_structure
documents/: Average Green Value Statistic.xlsx  Compare removing noise method.docx  changes_log.txt
documents/Find Color Values/Excel Files/: Green.xlsx
documents/Find Color Values/TXT Files/: green1.txt  green3.txt  red3.txt  yellow1.txt
documents/Report/: .~VER4-EXCEL-TIMELOG.xlsx  VER4-EXCEL-TIMELOG.xlsx
html/: colorProfile_8h_source.html  files.html  function_8h_source.html  md_README.html  pages.html
html/search/: all_0.js
images/: rename.sh
images/images_data/tomatos/: rename.sh~
include/: function.h  utils.h
latex/: md_README.tex  refman.tex
src/: function.cpp  main.cpp  utils.cpp
test_image/samples/.comments/: red5.jpg.xml  yellow4.jpg.xml
videos/: outcpp.avi
